[package]
name = "lmake_semver"
version = "0.1.2"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "Increments the patch or minor version in cargo.toml."
repository = "https://github.com/LucianoBestia/lmake_semver"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.0"
glob = "0.3.0"
regex = "1.3.6"
lazy_static="1.4.0"

[badges]
maintenance = { status = "passively-maintained" }
